[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
clap = { version = "4.0.2", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
bincode = "1.3.3"
dotenv = "0.15.0"
home = "0.5.3"
